fix overflow text

--- a/assets/css/portfolio.css
+++ b/assets/css/portfolio.css
@@ -1,5 +1,5 @@
 #portfolio{
-	margin: 50px 0 30px 0;
+	margin: 55px 0 30px 0;
 }
  ul.filterBtn {
 	list-style: none;
