--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,7 +5,7 @@ body {
 	background-attachment: fixed;
 	background-position: center center; 
 	background-size: cover; */
-
+	overflow-x: hidden!important;
 
 }
 
